tenants/base/pauwels-labs-main/infra/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio.io/rev: stable
    toolkit.fluxcd.io/tenant: pauwels-labs-main
  name: pauwels-labs-main
