tenants/base/pauwels-labs-main/infra/virtualservice-webhook-ci.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: webhook-ci
  namespace: pauwels-labs-main
spec:
  hosts:
  - webhook.ci.pauwelslabs.com
  gateways:
  - istio-ingress/pauwels-labs
  http:
  - name: "pauwels-labs"
    match:
    - uri:
        exact: "/pauwels-labs"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 8080
        host: el-github-pauwels-labs
